Fix: plus btn bottom spacing has to leave space for scrollbar

--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -206,7 +206,7 @@ $md_toolbar_height_shrink_limit: 959px
     min-height:  $height
 
   .plus_btn
-    bottom: 10px
+    bottom: 15px
 
 @media (max-height: 500px)
   .plus_btn
